升级laravel-plugin-manager至2.1

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
             "email": "baijunyao@baijunyao.com"
         }
     ],
-    "require": {},
+    "require": {
+        "baijunyao/laravel-plugin-manager": "2.1.*"
+    },
     "autoload": {
         "psr-4": {
             "Baijunyao\\LaravelSelect2\\": "src/"
